update to tasks

--- a/Test.ipynb
+++ b/Test.ipynb
@@ -340,6 +340,23 @@
     "dataAribnb = pd.read_csv('AB_NYC_2019.csv')\n",
     "dataAribnb"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Task 1: \n",
+    "- Identify Patterns between Borough/Neighborhood to Price and to Rating - Create a visual\n",
+    "- Create a visual for the relationship between (availability and price) and (availability and # of rating) for neighborhoods\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
