--- a/Test.ipynb
+++ b/Test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
        "[48895 rows x 16 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +346,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Task 1: \n",
+    "Task 1: For Each Comparison there should be a clear reason why we are compariing (OBJECTIVE)\n",
     "- Identify Patterns between Borough/Neighborhood to Price and to Rating - Create a visual\n",
     "- Create a visual for the relationship between (availability and price) and (availability and # of rating) for neighborhoods\n"
    ]
@@ -356,7 +356,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#code for Task 1"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Task 2: For Each Comparison there should be a clear reason why we are compariing (OBJECTIVE)\n",
+    "- Create a Dataframe for Host related values ie.(calculated_host_listings_count, number_of_reviews, neighboord/borough)\n",
+    "- Examine geographical availability and create a visual for availability vs availability_365/price\n",
+    "- Examine rental metrics price/location/price\n"
+   ]
   }
  ],
  "metadata": {
