--- a/Test.ipynb
+++ b/Test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {
     "scrolled": true
    },
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
        "4               0.10                               1                 0  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "metadata": {
     "scrolled": true
    },
@@ -454,7 +454,7 @@
        "max                        327.000000        365.000000  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +511,7 @@
    ],
    "source": [
     "# Calculate correlation matrix\n",
-    "correlation_matrix = dataAribnb[columns].corr()\n",
+    "correlation_matrix = dataAribnb[['price', 'minimum_nights', 'number_of_reviews', 'availability_365']].corr()\n",
     "\n",
     "# Create a heatmap\n",
     "sns.heatmap(correlation_matrix, annot=True, cmap='coolwarm')\n",
